Temporary project page made

--- a/projects.html
+++ b/projects.html
@@ -10,14 +10,41 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="projects.css">
 
-    <title>Joyce Huang</title>
+    <title>Projects | JH</title>
   </head>
   <body>
-    <h2 class="heading">Joyce Huang</h2>
-    <p>Born in the city of New York, raised with unending ambition.</p>
-    <p>Projects About</p>
+
+    <p class="custom-nav"><a href="index.html">Home</a>
+    <a href="about.html">About</a></p>
+
+    <div class="card-deck">
+        <div class="card">
+            <img src="images/litterly.png" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title"><a href="https://github.com/ajx3-workshop/litterly">Litterly</a></h5>
+            <p class="card-text">Litterly was made to encourage communities to come together to clean up the environment by allowing users to report locations of trash and to schedule meetups. By attending a meetup, the user will be awarded points.</p>
+            <p class="card-text"><small class="text-muted">Swift, Firebase, Firestore, Google Maps, Location API</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/plattr.png" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title"><a href="https://github.com/petitchoux/plattr">plattr</a></h5>
+            <p class="card-text">plattr is an interactive web application inspired by Tinder's UI to make a statement on how easy it is for society to consume media at a fast pace and its shallow effects. Similar to Tinder, plattr invites people to swipe through a series of photos of food. The viewer is able to stop at each one to learn more about the process of making them or move on to the next one.</p>
+            <p class="card-text"><small class="text-muted">HTML, CSS, JavaScript, jQuery, Bootstrap, Fotorama</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="images/messenger.png" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">Messenger</h5>
+            <p class="card-text">Messenger is a chatting web application that allows users to create an account and log in, search for other users, and send and receive messages.</p>
+            <p class="card-text"><small class="text-muted">PHP, SQL, JavaScript, CSS, HTML</small></p>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
