Reroute index. Added temp about

--- a/about.html
+++ b/about.html
@@ -10,14 +10,15 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="about.css">
 
-    <title>Joyce Huang</title>
+    <title>About | JH</title>
   </head>
   <body>
-    <h2 class="heading">Joyce Huang</h2>
-    <p>Born in the city of New York, raised with unending ambition.</p>
-    <p>Projects About</p>
+    <p class="custom-nav"><a href="index.html">Home</a>
+    <a href="projects.html">Projects</a></p>
+
+    <p class="bio">Hello, World! I am currently a senior at Baruch College majoring in computer information systems and minoring in marketing and new media arts. I specialize in frontend development for web and mobile technologies.</p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
