--- a/index.html
+++ b/index.html
@@ -8,55 +8,35 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Joyce Huang</title>
   </head>
   <body>
-    <h1 class="display-4">Joyce Huang</h1> 
-    <img src="profile.PNG" id="profilepic" alt="Profile picture">
-    <span id="icon">
-    <a href="https://www.linkedin.com/in/jhuang7/"><img src="linkedinicon.PNG" class="icon" alt="Linkedin icon"></a>
-    <a href="https://github.com/petitchoux"><img src="githubicon.PNG" class="icon" alt="Github icon"></a>
-    </span>
-    <h3>About Me</h3>
-    <p class="lead">
-        Hello, World! I am currently a senior at Baruch College majoring in computer information systems and minoring in marketing and new media arts. I specialize in frontend development for web and mobile technologies. 
-    </p>
+    <h2 class="heading">Joyce Huang</h2>
+    <p>Born in the city of New York, raised with unending ambition.</p>
+    <hr>
+    <!-- <div class="custom-nav">
+    <p><a href="projects.html">Projects</a> 
+        <a href="about.html">About</a></p></div> -->
 
-    <h3>Projects</h3>
-
-    <a href="https://github.com/ajx3-workshop/litterly"><h4>Litterly</h4></a>
-    <dl class="row">
-        <dt class="col-sm-3">Description</dt>
-        <dd class="col-sm-9">iOS application encouraging users to come together as a community to clean up the environment by reporting trash and scheduling group meetups.</dd>
-        
-        <dt class="col-sm-3">Technology</dt>
-        <dd class="col-sm-9">Swift, Firebase, Firestore, Google Maps, Location API</dd>
-    </dl>
-
-    <a href="https://github.com/petitchoux/plattr"><h4>plattr</h4></a>
-    <dl class="row">
-        <dt class="col-sm-3">Description</dt>
-        <dd class="col-sm-9">Plattr is an interactive web application that invites people to swipe through a series of photos of food. The viewer is able to stop at each one to learn more about the process of making them or move on to the next one.</dd>
-        
-        <dt class="col-sm-3">Technology</dt>
-        <dd class="col-sm-9">HTML, CSS, JavaScript, jQuery, Bootstrap, Fotorama</dd>
-    </dl>
-
-    <h3>Interests</h3>
-    <uo>
-        <li>Photography</li>
-        <li>Graphic Design</li>
-        <li>Swimming</li>
-        <li>Bouldering</li>
-        <li>Nutrition</li>
-        <li>Culinary & Pastry Arts</li>
-    </uo>
+    <div class="display">
+        <span class="left"><a class="HOVER" href="projects.html">
+        <span></span>
+        <text>Projects</text>
+        </a></span>
+        <span class="right"><a class="HOVER" href="about.html">
+        <span></span>
+        <text>About</text>
+        </a></span>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
