--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
         <div class="card">
             <img src="images/messenger.png" class="card-img-top" alt="...">
             <div class="card-body">
-            <h5 class="card-title">Messenger</h5>
+            <h5 class="card-title"><a href="https://github.com/petitchoux/Messenger">Messenger</a></h5>
             <p class="card-text">Messenger is a chatting web application that allows users to create an account and log in, search for other users, and send and receive messages.</p>
             <p class="card-text"><small class="text-muted">PHP, SQL, JavaScript, CSS, HTML</small></p>
             </div>
