--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
     <p class="custom-nav"><a href="index.html">Home</a>
     <a href="projects.html">Projects</a></p>
 
-    <p class="bio">Hello, World! I am currently a senior at Baruch College majoring in computer information systems and minoring in marketing and new media arts. I specialize in frontend development for web and mobile technologies.</p>
+    <img src="images/header.JPG">
+
+    <p class="bio">Hello, World!<br> I am currently a senior at Baruch College majoring in computer information systems and minoring in marketing and new media arts. I specialize in frontend development for web and mobile technologies.</p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
