Changed Proj page from cards to single scroll

--- a/projects.html
+++ b/projects.html
@@ -5,46 +5,74 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
-
+    <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="projects.css">
 
-    <title>Projects | JH</title>
+    <title>Projects | Joyce Huang</title>
   </head>
+
   <body>
 
     <p class="custom-nav"><a href="index.html">Home</a>
     <a href="about.html">About</a></p>
 
-    <div class="card-deck">
-        <div class="card">
-            <img src="images/litterly.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title"><a href="https://github.com/ajx3-workshop/litterly">Litterly</a></h5>
-            <p class="card-text">Litterly was made to encourage communities to come together to clean up the environment by allowing users to report locations of trash and to schedule meetups. By attending a meetup, the user will be awarded points.</p>
-            <p class="card-text"><small class="text-muted">Swift, Firebase, Firestore, Google Maps, Location API</small></p>
-            </div>
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="images/litterly_app.png" alt="" class="img-fluid">
         </div>
-        <div class="card">
-            <img src="images/plattr.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title"><a href="https://github.com/petitchoux/plattr">plattr</a></h5>
-            <p class="card-text">plattr is an interactive web application inspired by Tinder's UI to make a statement on how easy it is for society to consume media at a fast pace and its shallow effects. Similar to Tinder, plattr invites people to swipe through a series of photos of food. The viewer is able to stop at each one to learn more about the process of making them or move on to the next one.</p>
-            <p class="card-text"><small class="text-muted">HTML, CSS, JavaScript, jQuery, Bootstrap, Fotorama</small></p>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>Litterly</h2>
+              <hr>
+              <small class="text-muted">Swift, Firebase, Firestore, Google Maps, Location API</small>
+              <p class="lead">Litterly is an iOS application made to encourage communities to come together to clean up the environment by allowing users to report locations of trash and to schedule meetups. By attending a meetup, the user will be awarded points.</p>
+              <a href="https://github.com/ajx3-workshop/litterly"><img src="images/githubicon.png" alt="Github Logo" class="d-none d-lg-inline"></a>
             </div>
+          </div>
         </div>
-        <div class="card">
-            <img src="images/messenger.png" class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title"><a href="https://github.com/petitchoux/Messenger">Messenger</a></h5>
-            <p class="card-text">Messenger is a chatting web application that allows users to create an account and log in, search for other users, and send and receive messages.</p>
-            <p class="card-text"><small class="text-muted">PHP, SQL, JavaScript, CSS, HTML</small></p>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>plattr</h2>
+              <hr>
+              <small class="text-muted">HTML, CSS, JavaScript, jQuery, Bootstrap, Fotorama</small>
+              <p class="lead">plattr is an interactive web application inspired by Tinder's UI to make a statement on how easy it is for society to consume media at a fast pace and its effects. Similar to Tinder, plattr invites people to swipe through a series of photos of food. The viewer is able to stop at each one to learn more about the process of making them or move on to the next one.</p>
+              <a href="https://github.com/petitchoux/plattr"><img src="images/githubicon.png" alt="Github Logo" class="d-none d-lg-inline"></a>
             </div>
+          </div>
         </div>
-    </div>
+        <div class="col-md-6">
+          <img src="images/plattr_app.png" alt="" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
+          <div class="col-md-6 order-2 order-md-1">
+            <img src="images/messenger_app.jpg" alt="" class="img-fluid">
+          </div>
+          <div class="col-md-6 text-center order-1 order-md-2">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                <h2>Messenger</h2>
+                <hr>
+                <small class="text-muted">PHP, SQL, JavaScript, CSS, HTML</small>
+                <p class="lead">Messenger is a chatting web application that allows users to create an account and log in, search for other users, and send and receive messages.</p>
+                <a href="https://github.com/petitchoux/Messenger"><img src="images/githubicon.png" alt="Github Logo" class="d-none d-lg-inline"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
