--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Joyce Huang | Software Developer</title>
 
-    <script src="script.js"></script>
+    <script src="landing_script.js"></script>
 
   </head>
   <body>
