Changed bio. Added contact

--- a/about.html
+++ b/about.html
@@ -42,9 +42,34 @@
       </div>
     </nav>
 
-    <img src="images/header.JPG">
-
-    <p class="bio">Hello, World!<br> I am currently a senior at Baruch College majoring in computer information systems and minoring in marketing and new media arts. I specialize in frontend development for web and mobile technologies.</p>
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div id="bio" class="text-center d-none d-lg-block mt-5">
+                  <h2>From former cook to software developer.</h2>  
+                  <p>In 2016, I graduated from the International Culinary 
+                    Center. Soon after, I found a bigger passion that I wanted 
+                    to pursue: tech. Tech has enabled me to express my creativity and
+                    ideas through software development. In the spring of 2019, I 
+                   completed CodePath's iOS development course and am currently a 
+                    member of CUNY Tech Prep, a web development bootcamp funded by New York's 
+                    Tech Talent Pipeline. I will always be a student at heart and enjoy 
+                  learning new things.</p>
+                  <p>In my free time, I can be found baking sweets for my loved ones and 
+                    exploring new cultures through traveling. I have recently also been self-teaching 
+                    myself UI/UX design and playing with Adobe XD on the side. 
+                  </p>
+                  <a href="https://www.linkedin.com/in/jhuang7/"><i class="fab fa-linkedin-in contact-icons"></i></a>
+                  <a href="https://github.com/petitchoux"><i class="fab fa-github contact-icons"></i></a>
+                  <a href="mailto:huang.jnyc@gmail.com"><i class="far fa-envelope contact-icons"></i></a>
+                  <a href="tel:+1-347-653-8595"><i class="fas fa-phone contact-icons"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-6 mt-5">
+                <img class="img-fluid" src="images/profile_pic.jpg" alt="Profile Picture">
+            </div>
+        </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
