Add style directory, add project, remove phone number, update link

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/d0419ec70d.js" crossorigin="anonymous"></script>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="style/about.css">
 
     <title>About | Joyce Huang</title>
   </head>
@@ -62,7 +62,6 @@
                   <a href="https://www.linkedin.com/in/jhuang7/"><i class="fab fa-linkedin-in contact-icons"></i></a>
                   <a href="https://github.com/petitchoux"><i class="fab fa-github contact-icons"></i></a>
                   <a href="mailto:huang.jnyc@gmail.com"><i class="far fa-envelope contact-icons"></i></a>
-                  <a href="tel:+1-347-653-8595"><i class="fas fa-phone contact-icons"></i></a>
                 </div>
             </div>
             <div class="col-lg-6 mt-5">
