--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style/index.css">
 
     <title>Joyce Huang | Software Developer</title>
 
