--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/d0419ec70d.js" crossorigin="anonymous"></script>
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="projects.css">
+    <link rel="stylesheet" type="text/css" href="style/projects.css">
 
     <title>Projects | Joyce Huang</title>
   </head>
@@ -46,6 +46,23 @@
 
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>Feathers</h2>
+              <hr>
+              <small class="text-muted">JavaScript, Express, Node.js, PostgreSQL, Heroku</small>
+              <p class="lead">plattr is an interactive web application inspired by Tinder's UI to make a statement on how easy it is for society to consume media at a fast pace and its effects. Similar to Tinder, plattr invites people to swipe through a series of photos of food. The viewer is able to stop at each one to learn more about the process of making them or move on to the next one.</p>
+              <a href="https://github.com/petitchoux/feathers-index-api"><i class="fab fa-github github-icon-projs"></i></a><a href="https://devpost.com/software/feathers"><img src="images/devpost.png" class="devpost-icon"></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="images/feathers.png" alt="" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
           <img src="images/litterly_app.png" alt="" class="img-fluid">
         </div>
@@ -56,11 +73,12 @@
               <hr>
               <small class="text-muted">Swift, Firebase, Firestore, Google Maps, Location API</small>
               <p class="lead">Litterly is an iOS application made to encourage communities to come together to clean up the environment by allowing users to report locations of trash and to schedule meetups. By attending a meetup, the user will be awarded points.</p>
-              <a href="https://github.com/ajx3-workshop/litterly"><i class="fab fa-github github-icon-projs"></i></a>
+              <a href="https://github.com/cosmicRover/Litterly"><i class="fab fa-github github-icon-projs"></i></a>
             </div>
           </div>
         </div>
       </div>
+
       <div class="row align-items-center content">
         <div class="col-md-6 text-center">
           <div class="row justify-content-center">
